src/scss/main.scss
// These set the height of the browsing top bar
$thumbWidth: 64px; 
$thumbHeight:  64px;

$color-pri: #2196f3;
$color-sec: orange;

body {
    margin: 0;
}
.container-cmp {
    height: 100%;
    width: 100%;
    .cnt-contents {
       display: flex;
       flex-wrap: wrap;
    }

    .preview-content {
      flex-shrink: 0;
      margin: 2px;

      &:hover {
        border: 1px solid $color-pri;
        border-radius: 3px;
        background-color: lighten($color-pri, 20%);
      }
    }
}

.primary-card {
    margin: 1rem 0.25rem 0 0.25rem;
    mat-card-header {
        border-top: 2px solid $color-pri;
        border-radius: 3px;
        background-color: lighten($color-pri, 20%) !important;
        margin-bottom: 0.25rem;
        padding: 6px 4px 6px 4px;
    }
}

.video-view {
    width: 100%;
    display: flex;
}

.video-view-screens {
    margin-top: 30px;
}

.video-title {
    margin-left: 2rem;
}

.content-screens {
    display: flex;
}

.contented-view {
  margin-bottom: 2rem;
  display: flex;
  flex-wrap: wrap;
}

.container-search-form {
    .mat-mdc-form-field-subscript-wrapper {
        height: 0px;
    }
}

.nav-route-selection {
    margin-right: 2rem;
}

.active {
    border: 1px solid $color-pri !important;
    background-color: $color-pri !important;
}

// Might want to make this different than the top level browse component
.search-cmp {
    height: 100%;
    .search-results {
       display: flex;
       flex-wrap: wrap;
    }

    .preview-content {
      flex-shrink: 0;
      margin: 5px;
    }
}

.search-field {
    width: 60%;
}

.search-paginator {
    display: flex;
    width: 100%;
}

// Navigation and 
.container-bar {
    display: flex;
    flex-wrap: wrap;

    .container-preview-loc {
        width: $thumbWidth;
        height: $thumbHeight;
    }
    .container-preview-img {
        object-fit: contain;
        width: 100%;
        height: 100%;
    }
}

.container-search-form {
    font-size: 10px;
}

.container-search-form {
    margin-right: 1rem;
    .mat-form-field-wrapper {
        padding-bottom: 0rem;
    }
}

// The toolbar also has a lot of wasted space
.contented-nav-cmp {
    height: 38px;
    border-bottom: 1px solid $color-pri; 
}                                        
                                         
.container-contents {                    
    .mat-card-subtitle{                 
        margin-bottom: 0px;              
    }                                    
    .mat-card {                          
        padding: 0px;                    
    }                                   
}                                        
                                         
.container-bar-info {                    
    margin-top: 22px;                    
    display: flex;                       
    flex-wrap: wrap;                     
}                                        
                                         
.container-meta {                        
  padding: 0 !important;                 
}                                        
                                         
.bar-spacer {                            
  margin-left: 1.5rem;                   
}                                        
                                         
.search-dialog {                        
    min-height: calc(100vh - 100px);     
    width: 100%;                         
}                                        
                                         
.current-item {                          
  margin: 0 0 2rem 0;                    
}                                        
                                         
.current-img {                           
    background-color: lighten($color-pri, 45%);
    border: solid 1px $color-pri;
    border-radius: 2px;
}


.container-preview {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.content-full-view {

}

.content-video-screens {
    margin-top: 2rem;
}

.video-overlay {
  position: relative;
  display: inline-block;
  cursor: pointer;
  margin: 30px;

  &:before {
    position:absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    content: "\25B6";
    // font-family: "FontAwesome";
    font-size: 100px;
    color: #fff;
    opacity: .8;
    text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
  }
  &:hover:before {
    color: #eee;
  }
}

.video-overlay:hover {
    background: lighten($color-pri, 20%);
}

.selected-video {
    border: 1px solid $color-pri;
    background-color: lighten($color-pri, 40%);
}

.full-view-img {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.preview-img {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.preview-type {
    width: 100%;
    height: 100%;
    display: none;
}

// Based on content.shouldUseTypedPreview()
.preview-isvideocam, .preview-isarticle {
    border: 1px solid lighten($color-sec, 20%);
    .preview-type {
        display: block;
    }
    .preview-img {
        display: none;
    }
}

// Might need to change how it works in layout
.content-screens {
   display: flex; 
   flex-wrap: wrap;
}

.screen-dialog {
    display: flex;
}

.screen-img {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.current-content-cnt {
  margin: 0 0 0.5rem 0;
  border: 1px solid #aaa;
}

.current-content-item {
    border: 1px solid $color-pri;
}

.content-tag {
    margin-right: 0.25rem;
}

